src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-357.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incvb=3:00:60\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incvb=3:00:60"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: "3:00:60"
              loc: "incvb=3:00:60"
              locs:
                correction: "3:00:60"
                option: incvb
              option: BacksightInclinationCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: ESECONDSOUTOFRANGE
    loc: "60"
    message: Seconds out of range
    severity: Error
