src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-362.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incvb=100.01g\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incvb=100.01g"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: 100.01g
              loc: incvb=100.01g
              locs:
                correction: 100.01g
                option: incvb
              option: BacksightInclinationCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINCLINATIONOUTOFRANGE
    loc: 100.01g
    message: Inclination out of range
    severity: Error
